* Fixed bug in PresentationCompiler.parseTree - :ticket:`1001326`
* Ignore non-existent source classpath entries - :ticket:`1001394`
* Correct auto indent behavior in comments - :ticket:`1001432`
* Add syntax highlighting for numeric literals - :ticket:`1001442`
* Add syntax highlighting for escape sequences - :ticket:`1001372`
* Add syntax highlighting for Scaladoc - :ticket:`1001172`
* Disable Java quick fixes/assists in Scala sources :ticket:`1001434`
* Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
* Correct partitioning of octal sequences in character literals - :ticket:`1001443`