@@ -60,6 +60,7 @@ class ScalaSourceViewerConfiguration(store: IPreferenceStore, scalaPreferenceSto
       handlePartition(IJavaPartitions.JAVA_SINGLE_LINE_COMMENT, singleLineCommentScanner)
       handlePartition(IJavaPartitions.JAVA_MULTI_LINE_COMMENT, multiLineCommentScanner)
       handlePartition(IJavaPartitions.JAVA_STRING, stringScanner)
+      handlePartition(IJavaPartitions.JAVA_CHARACTER, characterScanner)
       handlePartition(ScalaPartitions.SCALA_MULTI_LINE_STRING, multiLineStringScanner)
       handlePartition(ScalaPartitions.XML_TAG, xmlTagScanner)
       handlePartition(ScalaPartitions.XML_COMMENT, xmlCommentScanner)
@@ -76,6 +77,7 @@ class ScalaSourceViewerConfiguration(store: IPreferenceStore, scalaPreferenceSto
    private val scaladocScanner = new ScaladocTokenScanner(ScalaSyntaxClasses.SCALADOC, ScalaSyntaxClasses.SCALADOC_ANNOTATION, ScalaSyntaxClasses.SCALADOC_MACRO, getColorManager, scalaPreferenceStore)
    private val scaladocCodeBlockScanner = new SingleTokenScanner(ScalaSyntaxClasses.SCALADOC_CODE_BLOCK, getColorManager, scalaPreferenceStore)
    private val stringScanner = new StringTokenScanner(ScalaSyntaxClasses.ESCAPE_SEQUENCE, ScalaSyntaxClasses.STRING, getColorManager, scalaPreferenceStore)
+   private val characterScanner = new StringTokenScanner(ScalaSyntaxClasses.ESCAPE_SEQUENCE, ScalaSyntaxClasses.CHARACTER, getColorManager, scalaPreferenceStore)
    private val multiLineStringScanner = new SingleTokenScanner(ScalaSyntaxClasses.MULTI_LINE_STRING, getColorManager, scalaPreferenceStore)
    private val xmlTagScanner = new XmlTagScanner(getColorManager, scalaPreferenceStore)
    private val xmlCommentScanner = new XmlCommentScanner(getColorManager, scalaPreferenceStore)
@@ -149,6 +151,7 @@ class ScalaSourceViewerConfiguration(store: IPreferenceStore, scalaPreferenceSto
       scaladocScanner.adaptToPreferenceChange(event)
       scaladocCodeBlockScanner.adaptToPreferenceChange(event)
       stringScanner.adaptToPreferenceChange(event)
+      characterScanner.adaptToPreferenceChange(event)
       multiLineStringScanner.adaptToPreferenceChange(event)
       singleLineCommentScanner.adaptToPreferenceChange(event)
       multiLineCommentScanner.adaptToPreferenceChange(event)
