@@ -7,3 +7,4 @@
 * Disable Java quick fixes/assists in Scala sources :ticket:`1001434`
 * Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
 * Correct partitioning of octal sequences in character literals - :ticket:`1001443`
+* Add syntax highlighting for escape sequences in character literals  - :ticket:`1001444`
